src/test/ui/range/issue-54505.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:14:5
   |
LL |     take_range(0..1);
   |     ^^^^^^^^^^^----^
   |                |
   |                expected `&_`, found `std::ops::Range<_>`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:19:5
   |
LL |     take_range(1..);
   |     ^^^^^^^^^^^---^
   |                |
   |                expected `&_`, found `RangeFrom<_>`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:24:5
   |
LL |     take_range(..);
   |     ^^^^^^^^^^^--^
   |                |
   |                expected `&_`, found `RangeFull`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:29:5
   |
LL |     take_range(0..=1);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `&_`, found `RangeInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:34:5
   |
LL |     take_range(..5);
   |     ^^^^^^^^^^^---^
   |                |
   |                expected `&_`, found `RangeTo<_>`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505.rs:39:5
   |
LL |     take_range(..=42);
   |     ^^^^^^^^^^^-----^
   |                |
   |                expected `&_`, found `RangeToInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505.rs:10:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
